--- a/spec/system/selectors/selectSectionChanges.spec.yaml
+++ b/spec/system/selectors/selectSectionChanges.spec.yaml
@@ -115,3 +115,47 @@ out:
           changeType: "add"
           data:
             resourceId: "bg2"
+---
+case: "Instantaneous actions (sfx) should not persist or show delete"
+in:
+  - state:
+      projectData:
+        story:
+          scenes:
+            scene1:
+              sections:
+                section1:
+                  lines:
+                    - id: "1"
+                      actions:
+                        sfx:
+                          items:
+                            - id: "sound1"
+                              resourceId: "boom"
+                    - id: "2"
+                      actions:
+                        dialogue:
+                          content:
+                            - text: "Next line"
+                    - id: "3"
+                      actions: {}
+  - sectionId: "section1"
+out:
+  lines:
+    - id: "1"
+      changes:
+        sfx:
+          changeType: "add"
+          data:
+            items:
+              - id: "sound1"
+                resourceId: "boom"
+    - id: "2"
+      changes:
+        dialogue:
+          changeType: "add"
+          data:
+            content:
+              - text: "Next line"
+    - id: "3"
+      changes: {}
