--- a/spec/system/renderState/addVisuals.spec.yaml
+++ b/spec/system/renderState/addVisuals.spec.yaml
@@ -91,6 +91,8 @@ in:
           properties:
             opacity: [0, 1]
             duration: 500
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -153,6 +155,8 @@ in:
           properties:
             opacity: [1, 0]
             duration: 300
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -222,6 +226,8 @@ in:
           properties:
             x: [150, 350]
             duration: 400
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -742,6 +748,8 @@ in:
           properties:
             alpha: [0, 1]
             duration: 500
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
