--- a/spec/system/renderState/addBackgroundOrCg.spec.yaml
+++ b/spec/system/renderState/addBackgroundOrCg.spec.yaml
@@ -65,6 +65,8 @@ in:
           properties:
             opacity: [0, 1]
             duration: 500
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -120,6 +122,8 @@ in:
           properties:
             opacity: [1, 0]
             duration: 1000
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -310,6 +314,8 @@ in:
           properties:
             scale: [1, 1.1, 1]
             duration: 1000
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
