--- a/spec/system/renderState/addCharacters.spec.yaml
+++ b/spec/system/renderState/addCharacters.spec.yaml
@@ -116,6 +116,8 @@ in:
           properties:
             opacity: [0, 1]
             duration: 500
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -170,6 +172,8 @@ in:
           properties:
             opacity: [1, 0]
             duration: 300
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
@@ -231,6 +235,8 @@ in:
           properties:
             scale: [1, 1.1, 1]
             duration: 1000
+    scopeChanges:
+      story: true
 out:
   elements:
     - id: "story"
